--- a/apps-backend/vercel.json
+++ b/apps-backend/vercel.json
@@ -15,5 +15,9 @@
         "Access-Control-Allow-Origin": "*"
       }
     }
-  ]
+  ],
+  "env": {
+    "VERCEL": "true",
+    "NODE_ENV": "production"
+  }
 }
