--- a/apps-backend/.env.example
+++ b/apps-backend/.env.example
@@ -4,6 +4,23 @@
 NODE_ENV=development
 PORT=3002
 
+# Database Configuration
+# -----------------------------------------
+# For Vercel deployment, MongoDB is REQUIRED due to read-only filesystem
+# For local development, you can use either MongoDB or SQLite
+# If MONGODB_URI is provided, MongoDB will be used
+# If MONGODB_URI is not provided, SQLite will be used
+
+# MongoDB Connection String (Required for MongoDB and Vercel deployment)
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/betabay?retryWrites=true&w=majority
+
+# SQLite Configuration (Local development only, will not work on Vercel)
+# DB_PATH=./database/betabay_apps.db
+
+# Vercel-specific settings 
+# Set to true when deployed on Vercel to detect the serverless environment
+VERCEL=true
+
 # Slack OAuth Configuration
 # Get these from your Slack app settings at api.slack.com/apps
 SLACK_CLIENT_ID=your_slack_client_id_here
@@ -15,9 +32,6 @@ FRONTEND_URL=http://localhost:3000
 
 # Session Secret - Use a strong random string in production
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
-
-# Database Configuration (SQLite is used by default)
-# DB_PATH=./database/betabay_apps.db
 
 # File Upload Configuration
 # MAX_FILE_SIZE=5242880  # 5MB in bytes
