--- a/apps-backend/package.json
+++ b/apps-backend/package.json
@@ -6,22 +6,25 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "init-db": "node scripts/init-database.js"
+    "init-db": "node scripts/init-database.js",
+    "migrate-to-mongodb": "node scripts/migrate-to-mongodb.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
     "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.0",
     "sqlite3": "^5.1.6",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1",
-    "joi": "^17.11.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -29,7 +32,14 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["betabay", "app-testing", "platform", "slack", "coins", "reviews"],
+  "keywords": [
+    "betabay",
+    "app-testing",
+    "platform",
+    "slack",
+    "coins",
+    "reviews"
+  ],
   "author": "",
   "license": "MIT"
 }
